--- a/newstalk-ai/backend/infrastructure/docker/requirements-airflow.txt
+++ b/newstalk-ai/backend/infrastructure/docker/requirements-airflow.txt
@@ -1,4 +1,4 @@
-# Airflow Requirements for NewsTeam AI
+# Airflow Requirements for NewsTalk AI
 # Core dependencies for high-performance news processing
 
 # RSS and Web Processing
@@ -13,17 +13,21 @@ psycopg2-binary==2.9.9
 kafka-python==2.0.2
 redis==5.0.1
 
-# AI and ML
+# AI and ML - Compatible versions that work together
 openai==1.51.0
-langchain==0.2.16
-langchain-community==0.2.16
+langchain
+langchain-openai
+langchain-community
+langgraph
+langfuse
+
+# Data Processing
 numpy==1.26.3
 pandas==2.2.0
 scikit-learn==1.4.0
-
-# Data Processing
 httpx==0.27.0
 python-dateutil==2.8.2
+pydantic
 
 # Performance and Monitoring
 prometheus-client==0.20.0 
