--- a/newstalk-ai/env.example
+++ b/newstalk-ai/env.example
@@ -31,6 +31,9 @@ REDIS_VOICE_FILES_TTL=0          # Permanent cache with CDN
 REDIS_REALTIME_STATS_TTL=300     # 5 minutes
 
 # Kafka Configuration (Stage 6)
+# 로컬 개발: localhost:9092
+# Docker Compose: kafka:29092 (자동 감지)
+# Kubernetes: kafka:9092 (자동 감지)
 KAFKA_BOOTSTRAP_SERVERS=localhost:9092
 KAFKA_HOST=localhost
 KAFKA_PORT=9092
