--- a/newstalk-ai/infrastructure/docker/Dockerfile.airflow
+++ b/newstalk-ai/infrastructure/docker/Dockerfile.airflow
@@ -1,10 +1,10 @@
-# Apache Airflow with LangGraph integration - Stage 8 Production Ready
+# Apache Airflow with Poetry dependency management - Stage 8 Production Ready
 FROM apache/airflow:2.8.0-python3.11
 
 # Labels for metadata
 LABEL maintainer="NewsTalk AI Team <dev@newstalk.ai>"
 LABEL version="1.0.0"
-LABEL description="NewsTalk AI Airflow Service"
+LABEL description="NewsTalk AI Airflow Service with Poetry"
 
 USER root
 
@@ -19,29 +19,23 @@ RUN apt-get update && apt-get install -y \
     && rm -rf /var/lib/apt/lists/* \
     && apt-get clean
 
-# Switch back to airflow user
+# Switch back to airflow user BEFORE installing Poetry
 USER airflow
 
-# Copy requirements file
-COPY requirements-airflow.txt /requirements-airflow.txt
+# Install Poetry as airflow user
+ARG POETRY_VERSION=1.7.1
+RUN pip install --no-cache-dir poetry==$POETRY_VERSION
 
-# Install Python dependencies with caching
-RUN pip install --no-cache-dir --upgrade pip && \
-    pip install --no-cache-dir -r /requirements-airflow.txt
+# Set working directory
+WORKDIR /opt/airflow
 
-# Install additional packages for LangGraph and AI operations
-RUN pip install --no-cache-dir \
-    langgraph==0.2.0 \
-    langchain==0.2.0 \
-    langchain-openai==0.1.0 \
-    openai==1.51.0 \
-    langfuse==2.46.0 \
-    pandas==2.2.0 \
-    scikit-learn==1.4.0 \
-    httpx==0.27.0 \
-    pydantic==2.9.0 \
-    prometheus-client==0.19.0 \
-    kafka-python==2.0.2
+# Copy Poetry configuration files
+COPY --chown=airflow:airflow pyproject.toml poetry.lock ./
+
+# Export dependencies to requirements.txt using Poetry and install
+RUN poetry export -f requirements.txt --output requirements.txt --without-hashes && \
+    pip install --no-cache-dir --upgrade pip && \
+    pip install --no-cache-dir -r requirements.txt
 
 # Set environment variables for production
 ENV AIRFLOW__CORE__LOAD_EXAMPLES=False \
